Se agrega el boton de borrar y su funcionalidad

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>        
 
         <div id="botones">
+            <button id="borrar" class="oscuro"></button>
             <button id="resetear" class="oscuro">AC</button>
-            <button id="negativo" class="oscuro">+/-</button>
             <button id="porcentaje" class="oscuro">%</button>
 
             <button class="operadores naranja">÷</button>            
@@ -44,6 +44,7 @@
             <button class="numero gris">3</button>
             <button class="operadores naranja">+</button>
 
+            <button id="negativo" class="oscuro">+/-</button>
             <button class="numero gris" id="btn-cero">0</button>
 
             <button id="punto" class="gris">.</button>
