--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
                 <div class="circulo c-2"></div>
                 <div class="circulo c-3"></div>
             </div>
+            <h1 id="pantalla_operaciones" class="po_color">0</h1>
             <h1 id="pantalla">0</h1>
         </div>        
 
         <div id="botones">
-            <button id="borrar" class="oscuro"></button>
             <button id="resetear" class="oscuro">AC</button>
+            <button id="borrar" class="oscuro"></button>
             <button id="porcentaje" class="oscuro">%</button>
 
             <button class="operadores naranja">÷</button>            
@@ -32,7 +33,7 @@
             <button class="numero gris">7</button>
             <button class="numero gris">8</button>
             <button class="numero gris">9</button>
-            <button class="operadores naranja">X</button>            
+            <button class="operadores naranja">x</button>            
 
             <button class="numero gris">4</button>
             <button class="numero gris">5</button>
