--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="circulo c-2"></div>
                 <div class="circulo c-3"></div>
             </div>
-            <h1 id="pantalla_operaciones" class="po_color">0</h1>
+            <h1 id="pantalla_operaciones" class="po_color">#</h1>
             <h1 id="pantalla">0</h1>
         </div>        
 
